LYT-421 Venue Manager Password set screen UI bug on mobile

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,7 +1,7 @@
 $sidebar-w: 170px;
 $sidebar-duration: 0.5s;
 
-html, body  {
+body.venue_manager  {
   height: 100%;
   overflow-x: hidden;
 }
